align center fix

--- a/lightbox/lightbox.css
+++ b/lightbox/lightbox.css
@@ -35,6 +35,7 @@ body.lb-disable-scrolling {
   font-weight: normal;
   outline: none;
   object-fit: cover;
+  justify-content: center;
 }
 
 .lightbox .lb-image {
